Fix unwanted 1px white line below search bar on mobile

--- a/webroot/css/layouts/default.css
+++ b/webroot/css/layouts/default.css
@@ -729,7 +729,7 @@ html[dir="rtl"] .search-bar-extra a:before {
  */
 .announcement-container {
     background-color: #fff;
-    padding: 1px;
+    overflow: hidden;
 }
 .maintenance {
     text-align: center;
